updated fonts urls

--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: Pp Neue Machina;
-    src: url("fonts/659dbdfd5a080be8d348316f_PPNeueMachina_Light.woff");
+    src: url("../fonts/659dbdfd5a080be8d348316f_PPNeueMachina_Light.woff");
     
 }
 @font-face {
     font-family: Satoshi Variable;
-    src: url("fonts/659dbdfd5a080be8d3483173_Satoshi-Variable.ttf");
+    src: url("../fonts/659dbdfd5a080be8d3483173_Satoshi-Variable.ttf");
 }
 
 
