update fonts file extension

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: Pp Neue Machina;
-    src: url("./fonts/659dbdfd5a080be8d348316f_PPNeueMachina_Light.woff");
+    src: url("./fonts/PPNeueMachina-Light.woff2");
     
 }
 @font-face {
