--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@
     src: url("./fonts/659dbdfd5a080be8d3483173_Satoshi-Variable.ttf");
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 
 *{
 margin: 0;
